# vo-aacenc

./: .gitignore  ChangeLog  Makefile.am  aac-enc.cpp  configure.ac  vo-aacenc.pc.in
aacenc/: SoftAACEncoder2.cpp
aacenc/basic_op/: basic_op.h  oper_32b.h  typedefs.h
aacenc/inc/: aacenc_core.h  psy_configuration.h
aacenc/src/: aacenc_core.c  adj_thr.c  dyn_bits.c  interface.c  memalign.c  psy_configuration.c  psy_main.c  quantize.c  sf_estim.c
common/: cmnMemory.c
common/include/: cmnMemory.h
